--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
-# animated-mining-screen
-<style>
+<!DOCTYPE html>
+<head></head>
+<body>
+    <style>
         body {
             background-color: #272727;
         }
@@ -232,3 +234,5 @@
         <p class="line3">&#062; block found - mining it!<span class="cursor3">_</span></p>
         <p class="endline">><span class="endcursor">_</span></p>
     </div>
+</body>
+</html>
